mario image swap

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									</li>
 									<li>
 										<!--<span class="icon major style3 fa-copy"></span>-->
-										<span class="image"><img src="images/mario - black.jpg" alt="" /></span>
+										<span class="image"><img src="images/pic03.jpg" alt="" /></span>
 										<h3>Mario // C++</h3>
 										<p>A semester 2 project.</p>
 									</li>
