--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									</li>
 									<li>
 										<!--<span class="icon major style3 fa-copy"></span>-->
-										<span class="image"><img src="images/pic03.jpg" alt="" /></span>
+										<span class="image"><img src="images/mario - Black.jpg" alt="" /></span>
 										<h3>Mario // C++</h3>
 										<p>A semester 2 project.</p>
 									</li>
@@ -80,7 +80,7 @@
 									<li>
 										<!--OpenGl-->
 										<!--<span class="icon major style5 fa-gem"></span>-->
-										<span class="image"><img src="images/open GL - black.jpg" alt="" /></span>
+										<span class="image"><img src="images/open GL - Black.jpg" alt="" /></span>
 										<h3>OpenGl // C++</h3>
 										<p>A future project.</p>
 									</li>
