--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<span class="logo"><img src="images/logo.svg" alt="" /></span>
 						<h1>Lee Hall</h1>
 						<h2>Welcome to my portfolio</h2>
-						<p>Python // C++// Mobile Dev // UE4</p>
+						<p>Python // C++ // Games Programming</p>
 					</header>
 
 				<!-- Nav -->
@@ -45,9 +45,9 @@
 										<header class="major">
 											<h2>Introduction</h2>
 										</header>
-										<p>I am a programmer and i need to finish this intro come back to me </p>
+										<p>I am a programmer in the United Kingdom particularly interested in computer games.Starting to code in highschool, my passion grew alongside my skill and influenced me to study a Bachelor of Science in Computer Games Programming at Staffordshire University. </p>
 										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
+											<li><a href="https://www.linkedin.com/in/lee-hall-937464204/" target = "_blank" class="button">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image"><img src="images/matrix.gif" alt="" /></span>
@@ -87,7 +87,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
+										<li><a href="https://github.com/lee-hall" target = "_blank" target = "_blank" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -96,13 +96,13 @@
 							<section id="second" class="main special">
 								<header class="major">
 									<h2>Skills</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>I have been coding for 5 years guided by highschool and sixthform education.<br />
+									I first began to program with a computer games focus in Alevel using python and pygame where the project gave me insight to the life of a programmer.</p>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
-										<strong>C++</strong> 4/10
+										<strong>C++</strong> 5/10
 									</li>
 									<li class="style2">
 										<span class="icon fa-folder-open"></span>
@@ -110,7 +110,7 @@
 									</li>
 									<li class="style3">
 										<span class="icon solid fa-signal"></span>
-										<strong>Mobile</strong> 0/10
+										<strong>Python</strong> 7/10
 									</li>
 									<li class="style4">
 										<span class="icon solid fa-laptop"></span>
@@ -121,10 +121,10 @@
 										<strong>UE4</strong> 0/10
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+								<p>The majority of my skills have been learned through educational guidance,which has led me to research into the games industry and the necessary skills required to succeed.This heavily impacted my choice of further education, where I am now a student at Staffordshire University so that I may deepen my knowledge in programming.</p>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="generic.html" class="button">View LinkedIn</a></li>
+										<!--<li><a href="generic.html" class="button">View LinkedIn</a></li>-->
 									</ul>
 								</footer>
 							</section>
@@ -133,17 +133,16 @@
 							<section id="cta" class="main special">
 								<header class="major">
 									<h2>Social</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<p>Links to my social media below.</p>
 								</header>
 							<a class="twitter-timeline" data-width="400" data-height="500" href="https://twitter.com/LEEMKHALL?ref_src=twsrc%5Etfw">Tweets by LEEMKHALL</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 								<footer class="major">
-									<ul class="actions special">
+									<!--<ul class="actions special">
 										<li><a href="generic.html" class="button primary">Get Started</a></li>
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
 								</footer>
-							</section>
+							</section>-->
 
 					</div>
 
